...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="250" id="dKA-CK-t8p"/>
                                    <constraint firstAttribute="height" constant="250" id="zXg-xD-D1P"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ONTime Weather" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wt1-VE-3Ej">
                                <rect key="frame" x="16" y="416.5" width="343" height="80"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="IP1-CQ-1Ri"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="35"/>
                                <color key="textColor" red="0.2784313725" green="0.46274509800000002" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
...
                                    <constraint firstItem="w3X-ak-SoZ" firstAttribute="top" secondItem="mhU-hZ-V7e" secondAttribute="top" constant="50" id="tTc-FG-xFJ"/>
                                </constraints>
                            </view>
                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0B-6H-uZn" customClass="RoundedShadowView" customModule="OnTime_Weather_App" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="73.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOME" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HcD-hE-377">
                                        <rect key="frame" x="140.5" y="26.5" width="94.5" height="36.5"/>
                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="28"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8p-rV-b5O">
...
